# swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: Fullstack Assessment API
+  title: Fullstack Assessment API by Tom R.
   version: 1.0.0
 paths:
   /brands:
@@ -22,25 +22,8 @@ paths:
                       type: string
                     logoPath:
                       type: string
+
   /products:
-    get:
-      summary: Get all products
-      responses:
-        "200":
-          description: A list of products
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    name:
-                      type: string
-                    price:
-                      type: number
     post:
       summary: Create a new product
       requestBody:
@@ -76,3 +59,115 @@ paths:
                     type: number
                   brandId:
                     type: number
+
+    get:
+      summary: Get all products
+      responses:
+        "200":
+          description: A list of products
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+                    price:
+                      type: number
+
+  "/products/{productId}":
+    get:
+      summary: Get single product
+      parameters:
+        - in: path
+          name: productId
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Details of a product
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  price:
+                    type: number
+                  upc12:
+                    type: number
+                  brandId:
+                    type: number
+    put:
+      summary: Update a product
+      parameters:
+        - in: path
+          name: productId
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                price:
+                  type: number
+                upc12:
+                  type: number
+                brandId:
+                  type: number
+      responses:
+        "200":
+          description: Updated product
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  price:
+                    type: number
+                  upc12:
+                    type: number
+                  brandId:
+                    type: number
+        "404":
+          description: Product not found
+        "400":
+          description: Bad request (e.g., invalid data format)
+    delete:
+      summary: Soft delete a product
+      parameters:
+        - in: path
+          name: productId
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Product successfully deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        "404":
+          description: Product not found
